# classroom-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: auth.py  main.py
src/classroom_downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
