[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom-downloader"
version = "0.1.0"
description = "Descarga entregas de Google Classroom, genera CSV, extrae texto de PDFs y crea reportes DOCX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "pandas>=1.5.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[tool.setuptools]
include-package-data = true
